feat: login with google

--- a/.development.env
+++ b/.development.env
@@ -1,7 +1,7 @@
 PORT=3000
 TRANSPORT_PORT=4000
-JWT_SECRET_KEY=th1s_1s_s3cr3t_k3y
-JWT_EXPIRATION_TIME=2592000
+JWT_SECRET=th1s_1s_s3cr3t_k3y
+JWT_EXPIRES_IN=30
 TIMEZONE=Asia/Ho_Chi_Minh
 
 DB_HOST=localhost
@@ -10,12 +10,9 @@ DB_USERNAME=ticket
 DB_PASSWORD=ticket123
 DB_DATABASE=ticket
 
-AUTHORIZATION_URL=https://auth.geekup.io/oauth2/auth
-TOKEN_URL= https://auth.geekup.io/oauth2/token
-CLIENT_ID=OGeekStaging
-CLIENT_SECRET=ogeek2021
-CALLBACK_URL=http://localhost:3000/api/oauth/otable/callback
-USERINFO_URL=https://auth.geekup.io/userinfo
+GOOGLE_CLIENT_ID=984282600564-bsheaoi2k1nsg7951lpbb441jfc0tj6v.apps.googleusercontent.com
+GOOGLE_SECRET=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
+GOOGLE_REDIRECT=http://localhost:3000/api/google/redirect
 HOME_URL=http://localhost:3000
 
 NODE_ENV=development
