--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "build": "nest build",
         "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
         "start": "nest start",
-        "start:dev": "nest start --watch",
+        "start:dev": "NODE_ENV=development nest start --watch",
         "start:debug": "nest start --debug --watch",
         "start:prod": "node dist/main",
         "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -28,6 +28,7 @@
     "dependencies": {
         "@nestjs/axios": "^0.0.8",
         "@nestjs/common": "^8.0.0",
+        "@nestjs/config": "^2.1.0",
         "@nestjs/core": "^8.0.0",
         "@nestjs/jwt": "^8.0.1",
         "@nestjs/microservices": "^8.4.7",
@@ -37,17 +38,22 @@
         "@nestjs/typeorm": "^8.1.4",
         "@sentry/node": "^7.2.0",
         "@sentry/tracing": "^7.2.0",
+        "bcrypt": "^5.0.1",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.13.2",
         "compression": "^1.7.4",
         "cookie-parser": "^1.4.6",
         "express-session": "^1.17.3",
+        "googleapis": "^103.0.0",
         "helmet": "^5.1.0",
+        "moment": "^2.29.3",
         "morgan": "^1.10.0",
         "mysql": "^2.14.1",
         "mysql2": "^2.3.3",
         "nats": "^2.7.1",
         "passport": "^0.6.0",
+        "passport-google-oauth20": "^2.0.0",
+        "passport-jwt": "^4.0.0",
         "passport-local": "^1.0.0",
         "pg": "^8.4.0",
         "reflect-metadata": "^0.1.13",
@@ -62,6 +68,7 @@
         "@nestjs/cli": "^8.0.0",
         "@nestjs/schematics": "^8.0.0",
         "@nestjs/testing": "^8.0.0",
+        "@types/bcrypt": "^5.0.0",
         "@types/compression": "^1.7.2",
         "@types/cookie-parser": "^1.4.3",
         "@types/express": "^4.17.13",
@@ -70,13 +77,18 @@
         "@types/lodash": "^4.14.182",
         "@types/morgan": "^1.9.3",
         "@types/node": "^16.11.10",
+        "@types/passport-google-oauth20": "^2.0.11",
+        "@types/passport-jwt": "^3.0.6",
         "@types/passport-local": "^1.0.34",
         "@types/supertest": "^2.0.11",
         "@typescript-eslint/eslint-plugin": "^5.28.0",
+        "@typescript-eslint/eslint-plugin-tslint": "^5.29.0",
         "@typescript-eslint/parser": "^5.28.0",
         "eslint": "^8.18.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-config-xo": "^0.41.0",
+        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-import-helpers": "^1.2.1",
         "eslint-plugin-prettier": "^4.0.0",
         "eslint-plugin-simple-import-sort": "^7.0.0",
         "jest": "28.0.3",
@@ -87,6 +99,7 @@
         "ts-loader": "^9.2.3",
         "ts-node": "10.7.0",
         "tsconfig-paths": "4.0.0",
+        "tslint": "^6.1.3",
         "typescript": "4.5.2"
     },
     "jest": {
