--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
         "migration:create": "npm run typeorm migration:create src/migrations/$npm_config_name",
         "migration:generate": "npm run typeorm migration:generate --pretty src/migrations/$npm_config_name",
         "migration": "npm run typeorm migration:run",
-        "migration:revert": "npm run typeorm migration:revert"
+        "migration:revert": "npm run typeorm migration:revert",
+        "prepare": "husky install"
     },
     "dependencies": {
         "@nestjs/axios": "^0.0.8",
@@ -91,7 +92,9 @@
         "eslint-plugin-import-helpers": "^1.2.1",
         "eslint-plugin-prettier": "^4.0.0",
         "eslint-plugin-simple-import-sort": "^7.0.0",
+        "husky": "^8.0.1",
         "jest": "28.0.3",
+        "lint-staged": "^13.0.2",
         "prettier": "^2.3.2",
         "source-map-support": "^0.5.20",
         "supertest": "^6.1.3",
@@ -118,5 +121,12 @@
         ],
         "coverageDirectory": "../coverage",
         "testEnvironment": "node"
+    },
+    "lint-staged": {
+        "*.ts": [
+            "npm run lint",
+            "npm run format",
+            "git add ."
+        ]
     }
 }
