--- a/.development.env
+++ b/.development.env
@@ -2,7 +2,7 @@ PORT=3000
 TRANSPORT_PORT=4000
 JWT_SECRET=th1s_1s_s3cr3t_k3y
 JWT_EXPIRES_IN=30
-TIMEZONE=Asia/Ho_Chi_Minh
+TZ=UTC
 
 DB_HOST=localhost
 DB_PORT=3306
@@ -12,6 +12,8 @@ DB_DATABASE=ticket
 
 GOOGLE_CLIENT_ID=984282600564-bsheaoi2k1nsg7951lpbb441jfc0tj6v.apps.googleusercontent.com
 GOOGLE_SECRET=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
+GOOGLE_REFRESH_TOKEN=1//04o1zqd55NkozCgYIARAAGAQSNwF-L9IrBBgnH6wLFtA3gLoO20DIdQoHaNK4qhv_3l4GHg2MsRV4HSF4HBeNJ3c-xGHI2dr-AOU
+EMAIL_ADMIN=ptithcm.studio@gmail.com
 GOOGLE_REDIRECT=http://localhost:3000/api/google/redirect
 HOME_URL=http://localhost:3000
 
