--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "build": "nest build",
         "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
         "start": "nest start",
-        "start:dev": "NODE_ENV=development nest start --watch",
+        "start:dev": "nest start --watch",
         "start:debug": "nest start --debug --watch",
         "start:prod": "node dist/main",
         "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -23,14 +23,14 @@
         "migration:create": "npm run typeorm migration:create src/migrations/$npm_config_name",
         "migration:generate": "npm run typeorm migration:generate --pretty src/migrations/$npm_config_name",
         "migration": "npm run typeorm migration:run",
-        "migration:revert": "npm run typeorm migration:revert",
-        "prepare": "husky install"
+        "migration:revert": "npm run typeorm migration:revert"
     },
     "dependencies": {
         "@nestjs/axios": "^0.0.8",
         "@nestjs/common": "^8.0.0",
         "@nestjs/config": "^2.1.0",
         "@nestjs/core": "^8.0.0",
+        "@nestjs/event-emitter": "^1.1.1",
         "@nestjs/jwt": "^8.0.1",
         "@nestjs/microservices": "^8.4.7",
         "@nestjs/passport": "^8.2.2",
@@ -45,6 +45,8 @@
         "compression": "^1.7.4",
         "cookie-parser": "^1.4.6",
         "express-session": "^1.17.3",
+        "generate-password": "^1.7.0",
+        "google-auth-library": "^8.0.3",
         "googleapis": "^103.0.0",
         "helmet": "^5.1.0",
         "moment": "^2.29.3",
@@ -52,6 +54,7 @@
         "mysql": "^2.14.1",
         "mysql2": "^2.3.3",
         "nats": "^2.7.1",
+        "nodemailer": "^6.7.5",
         "passport": "^0.6.0",
         "passport-google-oauth20": "^2.0.0",
         "passport-jwt": "^4.0.0",
@@ -78,6 +81,7 @@
         "@types/lodash": "^4.14.182",
         "@types/morgan": "^1.9.3",
         "@types/node": "^16.11.10",
+        "@types/nodemailer": "^6.4.4",
         "@types/passport-google-oauth20": "^2.0.11",
         "@types/passport-jwt": "^3.0.6",
         "@types/passport-local": "^1.0.34",
@@ -121,12 +125,5 @@
         ],
         "coverageDirectory": "../coverage",
         "testEnvironment": "node"
-    },
-    "lint-staged": {
-        "*.ts": [
-            "npm run lint",
-            "npm run format",
-            "git add ."
-        ]
     }
 }
