chore: update env

--- a/.development.example.env
+++ b/.development.example.env
@@ -1,14 +1,14 @@
 PORT=3000
 TRANSPORT_PORT=4000
 JWT_SECRET=
-JWT_EXPIRES_IN=30
+JWT_EXPIRES_IN=
 TZ=UTC
 
-DB_HOST=localhost
-DB_PORT=3306
-DB_USERNAME=ticket
-DB_PASSWORD=ticket123
-DB_DATABASE=ticket
+DB_HOST=
+DB_PORT=
+DB_USERNAME=
+DB_PASSWORD=
+DB_DATABASE=
 
 GOOGLE_CLIENT_ID=
 GOOGLE_SECRET=
