--- a/.development.example.env
+++ b/.development.example.env
@@ -1,20 +1,20 @@
 PORT=3000
 TRANSPORT_PORT=4000
-JWT_SECRET=
-JWT_EXPIRES_IN=
+JWT_SECRET=th1s_1s_s3cr3t_k3y
+JWT_EXPIRES_IN=30
 TZ=UTC
 
-DB_HOST=
-DB_PORT=
-DB_USERNAME=
-DB_PASSWORD=
-DB_DATABASE=
+DB_HOST=localhost
+DB_PORT=3306
+DB_USERNAME=ticket
+DB_PASSWORD=ticket123
+DB_DATABASE=ticket
 
-GOOGLE_CLIENT_ID=
-GOOGLE_SECRET=
-GOOGLE_REFRESH_TOKEN=
-EMAIL_ADMIN=
-GOOGLE_REDIRECT=
-HOME_URL=
+GOOGLE_CLIENT_ID=984282600564-bsheaoi2k1nsg7951lpbb441jfc0tj6v.apps.googleusercontent.com
+GOOGLE_SECRET=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
+GOOGLE_REFRESH_TOKEN=1//04o1zqd55NkozCgYIARAAGAQSNwF-L9IrBBgnH6wLFtA3gLoO20DIdQoHaNK4qhv_3l4GHg2MsRV4HSF4HBeNJ3c-xGHI2dr-AOU
+EMAIL_ADMIN=ptithcm.studio@gmail.com
+GOOGLE_REDIRECT=http://localhost:3000/api/google/redirect
+HOME_URL=http://localhost:3000
 
 NODE_ENV=development
