--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "@nestjs/microservices": "^8.4.7",
         "@nestjs/passport": "^8.2.2",
         "@nestjs/platform-express": "^8.0.0",
+        "@nestjs/serve-static": "^2.2.2",
         "@nestjs/swagger": "^5.2.1",
         "@nestjs/typeorm": "^8.1.4",
         "@sentry/node": "^7.2.0",
@@ -60,6 +61,7 @@
         "passport-jwt": "^4.0.0",
         "passport-local": "^1.0.0",
         "pg": "^8.4.0",
+        "qrcode": "^1.5.0",
         "reflect-metadata": "^0.1.13",
         "request-context": "^2.0.0",
         "rimraf": "^3.0.2",
@@ -85,6 +87,7 @@
         "@types/passport-google-oauth20": "^2.0.11",
         "@types/passport-jwt": "^3.0.6",
         "@types/passport-local": "^1.0.34",
+        "@types/qrcode": "^1.4.2",
         "@types/supertest": "^2.0.11",
         "@typescript-eslint/eslint-plugin": "^5.28.0",
         "@typescript-eslint/eslint-plugin-tslint": "^5.29.0",
