feat: send email and api payment

--- a/.development.example.env
+++ b/.development.example.env
@@ -3,6 +3,7 @@ TRANSPORT_PORT=4000
 JWT_SECRET=
 JWT_EXPIRES_IN=30
 TZ=UTC
+UPLOADED_FILES_DESTINATION=public/assets/upload
 
 DB_HOST=localhost
 DB_PORT=3306
@@ -16,5 +17,8 @@ GOOGLE_REFRESH_TOKEN=
 EMAIL_ADMIN=
 GOOGLE_REDIRECT=http://localhost:3000/api/google/redirect
 HOME_URL=http://localhost:3000
+
+vnp_TmnCode=
+vnp_HashSecret=
 
 NODE_ENV=development
