--- a/.development.example.env
+++ b/.development.example.env
@@ -3,7 +3,9 @@ TRANSPORT_PORT=4000
 JWT_SECRET=
 JWT_EXPIRES_IN=30
 TZ=UTC
-UPLOADED_FILES_DESTINATION=public/assets/upload
+UPLOADED_FILES_DESTINATION=assets/upload
+UPLOAD_URL=http://localhost:8080/
+UPLOAD_FOLDER=/var/www/static.file/public/assets/upload
 
 DB_HOST=localhost
 DB_PORT=3306
@@ -16,7 +18,6 @@ GOOGLE_SECRET=
 GOOGLE_REFRESH_TOKEN=
 EMAIL_ADMIN=
 GOOGLE_REDIRECT=http://localhost:3000/api/google/redirect
-HOME_URL=http://localhost:3000
 
 vnp_TmnCode=
 vnp_HashSecret=
