fix: prettier and language

--- a/.development.example.env
+++ b/.development.example.env
@@ -18,6 +18,8 @@ GOOGLE_SECRET=
 GOOGLE_REFRESH_TOKEN=
 EMAIL_ADMIN=
 GOOGLE_REDIRECT=http://localhost:3000/api/google/redirect
+HOME_URL=http://localhost:8000/
+
 
 vnp_TmnCode=
 vnp_HashSecret=
