--- a/.development.example.env
+++ b/.development.example.env
@@ -4,7 +4,7 @@ JWT_SECRET=
 JWT_EXPIRES_IN=30
 TZ=UTC
 UPLOADED_FILES_DESTINATION=assets/upload
-UPLOAD_URL=http://localhost:8080/
+DOMAIN=http://localhost:8080/
 UPLOAD_FOLDER=/var/www/static.file/public/assets/upload
 
 DB_HOST=localhost
