--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
 		"helmet": "^5.1.0",
 		"jimp": "^0.16.1",
 		"joi": "^17.6.0",
+		"jsonwebtoken": "^8.5.1",
 		"moment": "^2.29.3",
 		"morgan": "^1.10.0",
 		"mysql": "^2.14.1",
