--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"start": "nest start",
 		"start:dev": "nest start --watch",
 		"start:debug": "HTTPS=true nest start --debug --watch",
-		"start:prod": "node dist/main",
+		"start:prod": "node build/main",
 		"lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
 		"test": "jest",
 		"test:watch": "jest --watch",
